--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:awdH9GaZKM2s4yKV1aguaMQaEU9mpNjSdioT1g+6P7M=
 APP_DEBUG=true
-APP_URL=localhost
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
